# lg-pri-device

./: CMakeLists.txt  README.md  package.xml
lg_robot/src/: rgbd_camera_image.cpp  rgbd_camera_point_cloud.cpp  right_arm.cpp
src/: ai_bounding_box_publisher.cpp  head.cpp  left_arm.cpp  right_arm.cpp  service_test.cpp
srv/: GripperCommand.srv
